Actualizacion del controlador solicitud.